--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,5 +1,5 @@
 .header {
-    background-color: #4CAF50;
+    background-color: #7806b9;
     padding: 10px;
     color: white;
     display: flex;
